--- a/products.css
+++ b/products.css
@@ -122,7 +122,7 @@ img {
 }
 
 .gradient-mint-white {
-    background: linear-gradient(to right, #00bcd4, #ffffff); /* Bright Cyan to White */
+    background: linear-gradient(to right, #00bcd4, #2930ff); /* Bright Cyan to White */
 }
 
 .gradient-burnt-sandy {
